k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: smart-inventory
  labels:
    app: frontend
    app.kubernetes.io/name: smart-inventory-frontend
    app.kubernetes.io/part-of: smart-inventory-erp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: smart-inventory-frontend
        app.kubernetes.io/part-of: smart-inventory-erp
    spec:
      containers:
        - name: frontend
          image: smart-inventory-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: smart-inventory
  labels:
    app: frontend
    app.kubernetes.io/name: smart-inventory-frontend
    app.kubernetes.io/part-of: smart-inventory-erp
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
