k8s/base/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: smart-inventory
  labels:
    app: mysql
    app.kubernetes.io/name: smart-inventory-mysql
    app.kubernetes.io/part-of: smart-inventory-erp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        app.kubernetes.io/name: smart-inventory-mysql
        app.kubernetes.io/part-of: smart-inventory-erp
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          imagePullPolicy: IfNotPresent
          args:
            - "--character-set-server=utf8mb4"
            - "--collation-server=utf8mb4_unicode_ci"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql

            - name: mysql-init-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 70
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data

        - name: mysql-init-scripts
          configMap:
            name: mysql-init-scripts

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: smart-inventory
  labels:
    app: mysql
    app.kubernetes.io/name: smart-inventory-mysql
    app.kubernetes.io/part-of: smart-inventory-erp
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
